--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ DB_USER=postgres
 DB_PASS=postgres
 DB_PORT=5432
 DB_HOST=127.0.0.1
-NODE_ENV=development
+NODE_ENV=test
 SECRET_KEY=apvasdvasda900v2091v209510v9j
