--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,3 +1,4 @@
+require("babel-register");
 const path  = require('path')
 module.exports = {
     "config": path.resolve('./api/server/src/config', 'config.js'),
