--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
+    "babel-register": "^6.26.0",
     "bcryptjs": "^2.4.3",
     "codeclimate-test-reporter": "^0.5.1",
+    "cors": "^2.8.5",
     "coveralls": "^3.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
